minor update (-)edit role + permission in user

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "laravelcollective/html": "^6.2",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^5.1",
         "wulfheart/pretty_routes": "^0.3.0",
