--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
+        "spatie/laravel-backup": "^6.16",
         "spatie/laravel-permission": "^5.1",
         "wulfheart/pretty_routes": "^0.3.0",
         "yajra/laravel-datatables-oracle": "~9.0"
